# pyvec-uowm

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
examples/: from_points.py  print_version.py
include/: Vector.hpp
src/: Vector.cpp  bindings.cpp
